--- a/Periodico/CSS/estilo.css
+++ b/Periodico/CSS/estilo.css
@@ -26,6 +26,13 @@ nav {
     align-items: center;
     font-weight: bold;
 }
+
+#logoPagoda img {
+    width: 50px; /* Ajusta el tamaño según sea necesario */
+    height: auto; /* Para mantener la proporción */
+    right: 30px;
+}
+
 nav a {
     text-decoration: solid;
     font-size: 25px;
@@ -55,59 +62,70 @@ body{
     padding: 0;
 }
 
-/* hueco de noticias central*/
+/* disposicion de las noticias*/
+
+#tituloPagina{
+    display: inline;
+    text-align: center;
+    justify-content: center;
+    margin-top: 40px;
+    font-family: 'Arial Black', sans-serif;
+    font-weight: bold;
+    font-size: 30px;
+    color: #333;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    margin-bottom: 20px;
+}
 
 section {
     display: flex;
+    flex-direction: column;
     margin-left: 10%;
     margin-right: 10%;
 }
 
 article {
+    border-top: rgb(51, 51, 51, 0.5) dashed 2px;
+    padding-top: 20px;
+    padding-bottom: 20px;
     display: flex;
-    flex-direction:column;
-    align-items:flex-start;
+    flex-direction: row;
 }
 
-#tituloPagina{
-    text-align: center;
-    margin-top: 40px;
-    display: inline;
-    justify-content: center;
+.texto-noticia{
+    background-color: rgb(217, 139, 139, 0.5) ;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: auto;
+    margin-bottom: auto;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+.tituloArticulo{
+    font-family: 'Franklin Gothic Medium';
+    font-weight: bold;
     font-size: 30px;
+    margin-left: 20px;
+    margin-right: 20px; 
+}
+.descripcion{
+    color:#404040;
+    font-size: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
-/* Disposición de cada noticia dentro del bloque de noticias */
-.contenedor-noticias{
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: space-between;
-
-}
-.noticias-principales{
-    width: auto;
-    height: auto;
-}
-.noticias-secundarias{
-    width: auto;
-    height: auto;
-}
 .media{
-    width: 100%; /* Ajustar el ancho del elemento multimedia */
-    max-width: 400px; /* Ancho máximo para el elemento multimedia */
-    height: 200px;
+    width: 500px;
+    height: 300px;
 }
 
 /* footer y demás*/
 footer{
     background-color: #D98B8B;
     display:flex;
-}
-footer a {
-    text-decoration: solid;
-    color: #404040 ;
-    font-family:'Franklin Gothic Medium';
-}
-#logo-footer{
-    width: 10%;
 }
