--- a/Periodico/CSS/estilo.css
+++ b/Periodico/CSS/estilo.css
@@ -1,4 +1,4 @@
-/* Barra de navegación */
+/* Barra de navegación (presente en todas las paginas web */ 
 nav {
     display: flex; 
     align-items: center; 
@@ -14,6 +14,7 @@ nav {
     right: 20px;
 }
 
+/*Presente en todas*/
 #tituloLogo {
     position: fixed;
     right: 60px;
@@ -26,10 +27,9 @@ nav {
     align-items: center;
     font-weight: bold;
 }
-
 #logoPagoda img {
-    width: 50px; /* Ajusta el tamaño según sea necesario */
-    height: auto; /* Para mantener la proporción */
+    width: 50px; 
+    height: auto; 
     right: 30px;
 }
 
@@ -42,6 +42,7 @@ nav a {
 .navegacion{
     margin-left: 20px;
 }
+
 /* Cuerpo de la pagina web */
 
 main{
@@ -61,6 +62,10 @@ body{
     margin: 0;
     padding: 0;
 }
+
+
+/*Hasta aquí (CSS-fijo)*/
+
 
 /* disposicion de las noticias*/
 
@@ -86,6 +91,16 @@ section {
     margin-right: 10%;
 }
 
+/*Este apartado es de paginas de noticias derivadas del indice*/
+.section-imagenes-derivado{
+    display: flex;
+    flex-direction: row;
+    justify-content: center ;
+    margin-top: 20px;
+    margin-bottom: 30px;
+}
+
+
 article {
     border-top: rgb(51, 51, 51, 0.5) dashed 2px;
     padding-top: 20px;
@@ -105,6 +120,18 @@ article {
     margin-left: 20px;
     margin-right: 20px;
 }
+
+/*Este apartado es de paginas de noticias derivadas del indice*/
+.texto-noticia-derivantes{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: auto;
+    margin-bottom: auto;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
 .tituloArticulo{
     font-family: 'Franklin Gothic Medium';
     font-weight: bold;
@@ -119,10 +146,48 @@ article {
     margin-right: 20px;
 }
 
+#contenedor-dragonball-texto{
+    background-color: rgb(217, 139, 139, 0.5) ;
+    border-radius: 10px;
+}
+
 .media{
     width: 500px;
     height: 300px;
 }
+
+/*Este apartado es de paginas de noticias derivadas del indice*/
+.media-noticias-derivantes{
+    width: 500px;
+    height: 300px;
+    border-radius: 10px;
+    display: flex;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-bottom: 20px;
+}
+
+#media-noticias-derivantes-dragonball{
+    width: 325px;
+    height: 400px;
+    border-radius: 10px;
+    display: flex;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-bottom: 20px;
+}
+.enlace-paginas{
+    text-decoration: none;
+    color: black;
+    transition: color 0.3s ease;
+}
+
+/* Cambio de color al pasar el cursor */
+
+.enlace:hover {
+    color: rgb(242, 75, 75);
+}
+
 
 /* footer y demás*/
 footer{
