--- a/Periodico/CSS/estilo.css
+++ b/Periodico/CSS/estilo.css
@@ -89,6 +89,7 @@ section {
     flex-direction: column;
     margin-left: 10%;
     margin-right: 10%;
+    margin-bottom: 20px;
 }
 
 /*Este apartado es de paginas de noticias derivadas del indice*/
@@ -146,9 +147,17 @@ article {
     margin-right: 20px;
 }
 
+.descripcion-dragonball{
+    color:#404040;
+    font-size: 15px;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
 #contenedor-dragonball-texto{
     background-color: rgb(217, 139, 139, 0.5) ;
     border-radius: 10px;
+    margin-bottom: 20px;
 }
 
 .media{
@@ -158,8 +167,8 @@ article {
 
 /*Este apartado es de paginas de noticias derivadas del indice*/
 .media-noticias-derivantes{
-    width: 500px;
-    height: 300px;
+    width: 300px;
+    height: 200px;
     border-radius: 10px;
     display: flex;
     margin-left: 20px;
@@ -168,12 +177,10 @@ article {
 }
 
 #media-noticias-derivantes-dragonball{
-    width: 325px;
-    height: 400px;
+    width: 250px;
+    height: auto;
     border-radius: 10px;
     display: flex;
-    margin-left: 20px;
-    margin-right: 20px;
     margin-bottom: 20px;
 }
 .enlace-paginas{
@@ -193,4 +200,14 @@ article {
 footer{
     background-color: #D98B8B;
     display:flex;
+}
+
+
+/*CSS de la página de datos de contacto*/
+
+ul, li{
+    color:#404040;
+    font-size: 15px;
+    margin-left: 20px;
+    margin-right: 20px;
 }
