--- a/LuoAnton_PeriodicoCSS/CSS/estilo.css
+++ b/LuoAnton_PeriodicoCSS/CSS/estilo.css
@@ -96,6 +96,7 @@ section {
     display: flex;
     flex-direction: row;
     justify-content: center ;
+    flex-wrap: wrap;
     margin-top: 20px;
     margin-bottom: 30px;
 }
