--- a/LuoAnton_PeriodicoCSS/CSS/estilo.css
+++ b/LuoAnton_PeriodicoCSS/CSS/estilo.css
@@ -101,6 +101,14 @@ section {
     margin-bottom: 30px;
 }
 
+#section-imagenes-derivado-dragonball{
+    display: flex;
+    flex-direction: row;
+    justify-content: center ;
+    margin-top: 20px;
+    margin-bottom: 30px;
+}
+
 
 article {
     border-top: rgb(51, 51, 51, 0.5) dashed 2px;
